2009-04-25:  Major API changes:

             Removed function:

               * Mat.copy (use lacpy instead)

             Modified function:

               * geev (differently named arguments)

             Added functions:

               * lacpy (also copies triangular matrices)
               * larnv (random number generation)

             Fixed Mac OS X build problems.

             Lots of internal cleanups.

2009-04-23:  Improved numerical stability of Vec.ssqr for real numbers
             and zero mean.

2009-04-22:  Added new matrix function:

               * scal_cols

2009-01-21:  Added Vec.sqr_nrm2, which is numerically more stable than
             Vec.ssqr.  Added nrm2 for complex numbers (BLAS-1 function).

2009-01-14:  Greatly improved defaults for printing in toplevels.

2009-01-13:  Added context printing options to matrices.  This feature
             allows human-readable printing of huge matrices by only
             emitting specified horizontal and vertical contexts.

2008-11-12:  Improved Windows portability.

2008-11-10:  Fixed dynamic linking problem on Mac OS X.

2008-11-02:  Added new BLAS functions:

               * tpmv
               * tpsv

2008-11-01:  Added new BLAS function:

               * syr2k

2008-10-30:  Added new BLAS function:

               * trsv

2008-10-26:  Added two new matrix functions:

               * packed
               * unpacked

2008-10-15:  Added new LAPACK function:

               * geqrf

2008-09-21:  Added new BLAS and LAPACK functions:

               * trmm
               * trtrs
               * trtri

             Some minor API cleanups and internal improvements.

2008-09-17:  Added optional jitter argument to potrf, potrs, and potri.

2008-09-08:  !!! WARNING WARNING WARNING WARNING WARNING WARNING WARNING !!!

             potri and potrs now implicitly call potrf by default!
             This will break previous code depending on these functions,