@@ -1,5 +1,5 @@
 name="lacaml"
-version="5.0.1"
+version="5.0.2"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
