@@ -23,9 +23,20 @@
 
 #include <string.h>
 #include "lacaml_macros.h"
+#include "utils_c.h"
 #include "f2c.h"
 
-static integer ONE = 1;
+static integer integer_one = 1;
+static char transb_N = 'N';
+static NUMBER number_one = NUMBER_ONE;
+
+
+/* scal */
+
+extern void FUN(scal)(
+  integer *N,
+  NUMBER *ALPHA,
+  NUMBER *X, integer *INCX);
 
 CAMLprim value LFUN(scal_mat_stub)(
   value vM, value vN,
@@ -44,11 +55,11 @@ CAMLprim value LFUN(scal_mat_stub)(
   caml_enter_blocking_section();
     if (rows_A == M) {
       integer MN = M * N;
-      FUN(scal)(&MN, pALPHA, A_data, &ONE);
+      FUN(scal)(&MN, pALPHA, A_data, &integer_one);
     } else {
       NUMBER *A_src = A_data + rows_A * (N - 1);
       while (A_src >= A_data) {
-        FUN(scal)(&M, pALPHA, A_src, &ONE);
+        FUN(scal)(&M, pALPHA, A_src, &integer_one);
         A_src -= rows_A;
       }
     }
@@ -63,6 +74,9 @@ CAMLprim value LFUN(scal_mat_stub_bc)(value *argv, int argn)
     argv[0], argv[1], argv[2], argv[3], argv[4], argv[5]);
 }
 
+
+/* scal_cols */
+
 CAMLprim value LFUN(scal_cols_stub)(
   value vM, value vN,
   value vOFSALPHAs,
@@ -76,11 +90,12 @@ CAMLprim value LFUN(scal_cols_stub)(
   VEC_PARAMS(ALPHAs);
   MAT_PARAMS(A);
 
+  NUMBER *A_src = A_data + rows_A * (N - 1);
+  NUMBER *ALPHAs_src = ALPHAs_data + (N - 1);
+
   caml_enter_blocking_section();
-    NUMBER *A_src = A_data + rows_A * (N - 1);
-    NUMBER *ALPHAs_src = ALPHAs_data + (N - 1);
     while (A_src >= A_data) {
-      FUN(scal)(&M, ALPHAs_src, A_src, &ONE);
+      FUN(scal)(&M, ALPHAs_src, A_src, &integer_one);
       A_src -= rows_A;
       ALPHAs_src--;
     }
@@ -95,7 +110,16 @@ CAMLprim value LFUN(scal_cols_stub_bc)(value *argv, int argn)
     argv[0], argv[1], argv[2], argv[3], argv[4], argv[5], argv[6]);
 }
 
-CAMLprim value LFUN(axpy_mat_stub)(
+
+/* mat_axpy */
+
+extern void FUN(axpy)(
+  integer *N,
+  NUMBER *ALPHA,
+  NUMBER *X, integer *INCX,
+  NUMBER *Y, integer *INCY);
+
+CAMLprim value LFUN(mat_axpy_stub)(
   value vM, value vN,
   value vALPHA,
   value vXR, value vXC, value vX,
@@ -114,12 +138,12 @@ CAMLprim value LFUN(axpy_mat_stub)(
   caml_enter_blocking_section();
     if (rows_X == M && rows_Y == M) {
       integer MN = M * N;
-      FUN(axpy)(&MN, pALPHA, X_data, &ONE, Y_data, &ONE);
+      FUN(axpy)(&MN, pALPHA, X_data, &integer_one, Y_data, &integer_one);
     } else {
       NUMBER *X_src = X_data + rows_X * (N - 1);
       NUMBER *Y_dst = Y_data + rows_Y * (N - 1);
       while (X_src >= X_data) {
-        FUN(axpy)(&M, pALPHA, X_src, &ONE, Y_dst, &ONE);
+        FUN(axpy)(&M, pALPHA, X_src, &integer_one, Y_dst, &integer_one);
         X_src -= rows_X;
         Y_dst -= rows_Y;
       }
@@ -129,9 +153,128 @@ CAMLprim value LFUN(axpy_mat_stub)(
   CAMLreturn(Val_unit);
 }
 
-CAMLprim value LFUN(axpy_mat_stub_bc)(value *argv, int argn)
+CAMLprim value LFUN(mat_axpy_stub_bc)(value *argv, int argn)
 {
-  return LFUN(axpy_mat_stub)(
+  return LFUN(mat_axpy_stub)(
+    argv[0], argv[1], argv[2], argv[3], argv[4],
+    argv[5], argv[6], argv[7], argv[8]);
+}
+
+
+/* prod_diag */
+
+extern void FUN(gemm)(
+  char *TRANSA, char *TRANSB,
+  integer *M, integer *N, integer *K,
+  NUMBER *ALPHA,
+  NUMBER *A, integer *LDA,
+  NUMBER *B, integer *LDB,
+  NUMBER *BETA,
+  NUMBER *C, integer *LDC);
+
+CAMLprim value LFUN(prod_diag_stub)(
+  value vTRANSA,
+  value vN, value vK,
+  value vAR, value vAC, value vA,
+  value vBR, value vBC, value vB,
+  value vOFSY,
+  value vY,
+  value vALPHA,
+  value vBETA
+  )
+{
+  CAMLparam3(vA, vB, vY);
+
+  integer GET_INT(N), GET_INT(K);
+  char GET_INT(TRANSA);
+
+  CREATE_NUMBERP(ALPHA);
+  CREATE_NUMBERP(BETA);
+
+  MAT_PARAMS(A);
+  MAT_PARAMS(B);
+  VEC_PARAMS(Y);
+
+  int incr_A = (TRANSA == 'N') ? 1 : rows_A;
+
+  INIT_NUMBER(ALPHA);
+  INIT_NUMBER(BETA);
+
+  caml_enter_blocking_section();  /* Allow other threads */
+  while (N--) {
+    /* TODO: quite inefficient for small K (> factor 2 for ten elements).
+       Optimize by essentially reimplementing gemm, possibly using "dot"
+       at each step, but hoisting all initializations and checks out of
+       the loop. */
+    FUN(gemm)(
+      &TRANSA, &transb_N,
+      &integer_one, &integer_one, &K,
+      pALPHA,
+      A_data, &rows_A,
+      B_data, &rows_B,
+      pBETA,
+      Y_data, &integer_one);
+    A_data += incr_A;
+    B_data += rows_B;
+    Y_data++;
+  }
+  caml_leave_blocking_section();  /* Disallow other threads */
+
+  CAMLreturn(Val_unit);
+}
+
+CAMLprim value LFUN(prod_diag_stub_bc)(value *argv, int argn)
+{
+  return LFUN(prod_diag_stub)(
+    argv[0], argv[1], argv[2], argv[3], argv[4], argv[5], argv[6],
+    argv[7], argv[8], argv[9], argv[10], argv[11], argv[12]);
+}
+
+/* prod_trace */
+
+CAMLprim value LFUN(prod_trace_stub)(
+  value vTRANSA,
+  value vN, value vK,
+  value vAR, value vAC, value vA,
+  value vBR, value vBC, value vB)
+{
+  CAMLparam2(vA, vB);
+
+  integer GET_INT(N), GET_INT(K);
+  char GET_INT(TRANSA);
+
+  MAT_PARAMS(A);
+  MAT_PARAMS(B);
+
+  int incr_A = (TRANSA == 'N') ? 1 : rows_A;
+
+  NUMBER res = NUMBER_ZERO;
+
+  caml_enter_blocking_section();  /* Allow other threads */
+  while (N--) {
+    /* TODO: quite inefficient for small K (> factor 2 for ten elements).
+       Optimize by essentially reimplementing gemm, possibly using "dot"
+       at each step, but hoisting all initializations and checks out of
+       the loop. */
+    FUN(gemm)(
+      &TRANSA, &transb_N,
+      &integer_one, &integer_one, &K,
+      &number_one,
+      A_data, &rows_A,
+      B_data, &rows_B,
+      &number_one,
+      &res, &integer_one);
+    A_data += incr_A;
+    B_data += rows_B;
+  }
+  caml_leave_blocking_section();  /* Disallow other threads */
+
+  CAMLreturn(COPY_NUMBER(res));
+}
+
+CAMLprim value LFUN(prod_trace_stub_bc)(value *argv, int argn)
+{
+  return LFUN(prod_trace_stub)(
     argv[0], argv[1], argv[2], argv[3], argv[4],
     argv[5], argv[6], argv[7], argv[8]);
 }
